--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "vue-js-toggle-button": "^1.2.2",
     "vue-switches": "^2.0.1",
     "vue-timeago": "^3.4.4",
+    "vue-websocket": "^0.2.2",
     "vue-yandex-metrika": "^1.6.1",
     "vue2-highcharts": "^1.1.9",
     "yandex-metrika": "^0.1.2-beta"
