--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.18.0",
     "bootstrap-vue": "^2.0.0-rc.8",
     "chart.js": "^2.7.2",
+    "moment": "^2.22.1",
     "nuxt": "^1.4.0",
     "vue-chartjs": "^3.3.1",
     "vue-infinite-loading": "^2.2.3",
