--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "moment": "^2.22.1",
     "nuxt": "^1.4.0",
     "vue-chartjs": "^3.3.1",
+    "vue-dropdowns": "^1.0.4",
     "vue-infinite-loading": "^2.2.3",
     "vue-js-toggle-button": "^1.2.2",
+    "vue-social-sharing": "^2.3.3",
     "vue-switches": "^2.0.1",
     "vue-timeago": "^3.4.4",
     "vue-websocket": "^0.2.2",
