--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
+    "@nuxtjs/auth": "^4.5.1",
     "@nuxtjs/axios": "^5.3.1",
     "@nuxtjs/feed": "^0.1.1",
+    "@nuxtjs/proxy": "^1.2.4",
     "@nuxtjs/yandex-metrika": "^0.1.0",
-    "axios": "^0.18.0",
     "bootstrap-vue": "^2.0.0-rc.11",
     "chart.js": "^2.7.2",
     "jsonapi-datastore": "^0.4.0-beta",
@@ -31,7 +32,8 @@
     "vue-websocket": "^0.2.2",
     "vue-yandex-metrika": "^1.6.1",
     "vue2-highcharts": "^1.1.9",
-    "yandex-metrika": "^0.1.2-beta"
+    "yandex-metrika": "^0.1.2-beta",
+    "axios": "^0.18.0"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.3",
