--- a/package.json
+++ b/package.json
@@ -18,12 +18,16 @@
     "@nuxtjs/feed": "^0.1.1",
     "@nuxtjs/proxy": "^1.2.4",
     "@nuxtjs/yandex-metrika": "^0.1.0",
+    "axios": "^0.18.0",
     "bootstrap-vue": "^2.0.0-rc.11",
     "chart.js": "^2.7.2",
+    "highcharts": "^6.1.0",
+    "highcharts-vue": "^1.0.4",
     "jsonapi-datastore": "^0.4.0-beta",
     "moment": "^2.22.1",
     "nuxt": "^1.4.0",
     "vue-chartjs": "^3.3.1",
+    "vue-highcharts": "0.0.10",
     "vue-infinite-loading": "^2.3.1",
     "vue-js-toggle-button": "^1.2.3",
     "vue-social-sharing": "^2.3.3",
@@ -31,9 +35,8 @@
     "vue-timeago": "^3.4.4",
     "vue-websocket": "^0.2.2",
     "vue-yandex-metrika": "^1.6.1",
-    "vue2-highcharts": "^1.1.9",
-    "yandex-metrika": "^0.1.2-beta",
-    "axios": "^0.18.0"
+    "vue2-highcharts": "^1.2.4",
+    "yandex-metrika": "^0.1.2-beta"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.3",
