--- a/package.json
+++ b/package.json
@@ -16,19 +16,15 @@
     "@nuxtjs/auth": "^4.5.1",
     "@nuxtjs/axios": "^5.3.1",
     "@nuxtjs/feed": "^0.1.1",
+    "@nuxtjs/moment": "^1.0.0",
     "@nuxtjs/proxy": "^1.2.4",
     "@nuxtjs/yandex-metrika": "^0.1.0",
     "axios": "^0.18.0",
-    "bootstrap-vue": "^2.0.0-rc.11",
-    "chart.js": "^2.7.2",
     "highcharts": "^6.1.0",
-    "vue2-highcharts": "^1.2.4",
     "jsonapi-datastore": "^0.4.0-beta",
     "moment": "^2.22.1",
     "nuxt": "^1.4.0",
-    "vue-chartjs": "^3.3.1",
     "vue-infinite-loading": "^2.3.1",
-    "vue-js-toggle-button": "^1.2.3",
     "vue-social-sharing": "^2.3.3",
     "vue-switches": "^2.0.1",
     "vue-timeago": "^3.4.4",
