--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "moment": "^2.22.1",
     "nuxt": "^1.4.1",
     "vue-infinite-loading": "^2.3.1",
+    "vue-observe-visibility": "^0.4.1",
     "vue-social-sharing": "^2.3.3",
     "vue-switches": "^2.0.1",
     "vue-timeago": "^3.4.4",
