--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jsonapi-datastore": "^0.4.0-beta",
     "moment": "^2.22.1",
     "nuxt": "^1.4.1",
+    "nuxt-facebook-pixel-module": "^1.0.0",
     "vue-infinite-loading": "^2.3.1",
     "vue-observe-visibility": "^0.4.1",
     "vue-social-sharing": "^2.3.3",
