--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@nuxtjs/proxy": "^1.3.1",
     "@nuxtjs/yandex-metrika": "^0.1.0",
     "axios": "^0.18.0",
+    "cryptocurrency-address-validator": "^0.1.3",
     "intersection-observer": "^0.5.1",
     "jsona": "^1.3.0",
     "jsonapi-datastore": "^0.4.0-beta",
