--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nuxtjs/feed": "^0.1.1",
     "@nuxtjs/moment": "^1.1.0",
     "@nuxtjs/proxy": "^1.3.1",
+    "@nuxtjs/pwa": "^2.6.0",
     "@nuxtjs/yandex-metrika": "^0.1.0",
     "axios": "^0.18.0",
     "cryptocurrency-address-validator": "^0.1.3",
