--- a/package.json
+++ b/package.json
@@ -15,18 +15,14 @@
   "dependencies": {
     "@nuxtjs/auth": "^4.5.3",
     "@nuxtjs/axios": "^5.3.6",
-    "@nuxtjs/feed": "^0.1.1",
-    "@nuxtjs/moment": "^1.1.0",
     "@nuxtjs/proxy": "^1.3.1",
     "@nuxtjs/pwa": "^2.6.0",
     "@nuxtjs/yandex-metrika": "^0.1.0",
-    "axios": "^0.18.0",
     "cryptocurrency-address-validator": "^0.1.3",
     "d3": "^5.7.0",
     "intersection-observer": "^0.5.1",
     "jsona": "^1.3.0",
-    "jsonapi-datastore": "^0.4.0-beta",
-    "moment": "^2.23.0",
+    "normalize.css": "^8.0.1",
     "nuxt": "^1.4.5",
     "nuxt-facebook-pixel-module": "^1.1.0",
     "vue-infinite-loading": "^2.4.3",
@@ -34,9 +30,7 @@
     "vue-social-sharing": "^2.3.3",
     "vue-switches": "^2.0.1",
     "vue-timeago": "^3.4.4",
-    "vue-websocket": "^0.2.2",
-    "vue-yandex-metrika": "^1.6.1",
-    "yandex-metrika": "^0.1.2-beta"
+    "vue-websocket": "^0.2.2"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.3",
