--- a/package.json
+++ b/package.json
@@ -1,16 +1,9 @@
 {
   "name": "ff",
-  "version": "1.0.0",
-  "description": "ff project",
-  "author": "pashtet",
-  "private": true,
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
-    "start": "nuxt start",
-    "generate": "nuxt generate",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "precommit": "npm run lint"
+    "start": "nuxt start"
   },
   "dependencies": {
     "@nuxtjs/auth": "^4.5.3",
@@ -23,24 +16,17 @@
     "intersection-observer": "^0.5.1",
     "jsona": "^1.3.0",
     "normalize.css": "^8.0.1",
-    "nuxt": "^1.4.5",
+    "nuxt": "^2.3.4",
     "nuxt-facebook-pixel-module": "^1.1.0",
     "vue-infinite-loading": "^2.4.3",
     "vue-observe-visibility": "^0.4.3",
     "vue-social-sharing": "^2.3.3",
     "vue-switches": "^2.0.1",
     "vue-timeago": "^3.4.4",
-    "vue-websocket": "^0.2.2"
+    "vue-websocket": "^0.2.3"
   },
   "devDependencies": {
-    "babel-eslint": "^8.2.3",
-    "eslint": "^4.15.0",
-    "eslint-friendly-formatter": "^3.0.0",
-    "eslint-loader": "^1.7.1",
-    "eslint-plugin-vue": "^4.5.0",
-    "less": "^3.9.0",
-    "less-loader": "^4.1.0",
     "node-sass": "^4.11.0",
-    "sass-loader": "^7.0.1"
+    "sass-loader": "^7.1.0"
   }
 }
