--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "nuxt start"
   },
   "dependencies": {
+    "@miyaoka/nuxt-twitter-widgets-module": "0.0.1",
     "@nuxtjs/auth": "^4.5.3",
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/proxy": "^1.3.1",
@@ -13,6 +14,7 @@
     "@nuxtjs/yandex-metrika": "^0.1.0",
     "cryptocurrency-address-validator": "^0.1.3",
     "d3": "^5.7.0",
+    "intersection-observer": "^0.5.1",
     "jsona": "^1.3.0",
     "normalize.css": "^8.0.1",
     "nuxt": "^2.3.4",
@@ -20,7 +22,6 @@
     "nuxt-webfontloader": "^1.0.0",
     "vue-infinite-loading": "^2.4.3",
     "vue-observe-visibility": "^0.4.3",
-    "intersection-observer": "^0.5.1",
     "vue-social-sharing": "^2.3.3",
     "vue-switches": "^2.0.1",
     "vue-timeago": "^3.4.4",
