--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "vue-infinite-loading": "^2.4.3",
     "vue-observe-visibility": "^0.4.3",
     "vue-social-sharing": "^2.3.3",
+    "vue-star-rating": "^1.6.1",
     "vue-switches": "^2.0.1",
     "vue-timeago": "^3.4.4",
     "vue-websocket": "^0.2.3"
