--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@miyaoka/nuxt-twitter-widgets-module": "0.0.1",
     "@nuxtjs/auth": "^4.5.3",
     "@nuxtjs/axios": "^5.3.6",
+    "@nuxtjs/google-adsense": "^1.1.3",
     "@nuxtjs/proxy": "^1.3.1",
     "@nuxtjs/pwa": "^2.6.0",
     "@nuxtjs/yandex-metrika": "^0.1.0",
